--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link active" routerLink="/carousel">Carousel</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active">Disabled</a>
+            <a class="nav-link active"  routerLink="/search">Search</a>
           </li>
         </ul>
        
